--- a/war/src/main/webapp/engines/jahia-anthracite/_new_components.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_new_components.scss
@@ -13,7 +13,7 @@
 	// z-index: $ZINDEX--CONTEXT_MENU;
 	z-index: 999999999999999!important;
 	border: none;
-	box-shadow: 2px 2px 10px rgba(38, 38, 38, 0.5);
+	// box-shadow: 2px 2px 10px rgba(38, 38, 38, 0.5);
 
 	.x-menu-list {
 		height: auto!important;
